--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 </div>
                 <!-- Home Visits Card -->
                 <div class="rounded-xl overflow-hidden bg-gray-100 shadow-md">
-                    <img src="vis.png" alt="People visiting a home" class="w-full h-48 object-cover">
+                    <img src="Screenshot 2025-08-04 204306.png" alt="People visiting a home" class="w-full h-48 object-cover">
                     <div class="p-4">
                         <h3 class="text-xl font-semibold text-gray-800">Home Visits & Community Outreach</h3>
                         <p class="text-gray-600 mt-2">We extend our ministry to homes and the wider community to offer support and share God's love.</p>
