--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <img src="unnamed (2).png" alt="JAM Worship Logo" class="h-14 w-14 rounded-full">
                 <span class="text-2xl font-bold tracking-wide">JAM WORSHIP</span>
             </a>
-            <nav>
+            <nav class="hidden md:block">
                 <ul class="flex space-x-6">
                     <li><a href="#about" class="nav-link">About</a></li>
                     <li><a href="#vision-mission" class="nav-link">Vision & Mission</a></li>
@@ -89,6 +89,23 @@
                     <li><a href="#contact" class="nav-link">Contact</a></li>
                 </ul>
             </nav>
+            <button id="mobile-menu-button" class="md:hidden focus:outline-none">
+                <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
+                </svg>
+            </button>
+        </div>
+
+        <div id="mobile-menu" class="hidden md:hidden bg-gray-700 mt-4 py-2">
+            <ul class="flex flex-col items-center space-y-4">
+                <li><a href="#about" class="nav-link block py-2">About</a></li>
+                <li><a href="#vision-mission" class="nav-link block py-2">Vision & Mission</a></li>
+                <li><a href="#objectives" class="nav-link block py-2">Objectives</a></li>
+                <li><a href="#activities" class="nav-link block py-2">Activities</a></li>
+                <li><a href="#ministry-in-action" class="nav-link block py-2">Our Ministry</a></li>
+                <li><a href="#contact" class="nav-link block py-2">Contact</a></li>
+            </ul>
+        </div>
         </div>
     </header>
 
